[package]
name = "mdp-link-p905"
version = "0.1.0"
authors = ["Christian Perez Llamas"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"
nb = "1.1"

embedded-hal = "1.0.0"
nrf52840-hal = "0.16.0"

mdp-protocols = { path = "../mdp-protocols" }
nrf52840-mdk = { path = "../nrf52840-mdk" }
nrf52-radio = { path = "../nrf52-radio" }
nrf52-esb = { path = "../nrf52-esb" }

# cortex-m-rtfm = "0.4.3"
panic-semihosting = "0.6.0"
cortex-m-semihosting = "0.5.0"

[features]
rt = ["nrf52840-hal/rt"]
default = ["rt"]