[package]
name = "nrf52-esb"
version = "0.1.0"
authors = ["Christian Perez Llamas"]
edition = "2018"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"
nb = "1.1"

nrf52-radio = { path = "../nrf52-radio" }

cortex-m-semihosting = "0.5.0"

#[features]
#rt = ["nrf52840-hal/rt"]
#default = ["rt"]