[package]
name = "nrf52840-mdk"
version = "0.1.0"
authors = ["Christian Perez Llamas"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7"
nb = "1.1"

embedded-hal = "1.0.0"
nrf52840-hal = "0.16.0"

nrf52840-pac = "0.12.2"